KIK-1982, fixing cut off letters on other pages

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -2429,14 +2429,6 @@ th, .th {
       padding: 6px 12px;
       line-height: 24px;
     }
-
-    .Select-input > input {
-      padding: 4px 0;
-    }
-
-    .form-search .form-control {
-      padding: 4px 11px 2px;
-    }
   }
 }
 
@@ -5192,6 +5184,14 @@ div[data-percentage],
 
 .default-cursor {
 	cursor: default !important;
+}
+
+.Select-control .Select-input > input {
+  padding: 4px 0;
+}
+
+.form-search .form-control {
+  padding: 4px 11px 2px;
 }
 
 .tooltip-element {
